The PAM module has worked

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ crate-type = ["dylib"]
 [dependencies]
 libc = "0.2.0"
 openssl = "0.9.17"
+toml = "0.4"
+uuid = { version = "0.5", features = ["v4"] }
