--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wsl_hello_pam"
-version = "1.1.0"
+version = "1.2.0"
 authors = ["Takaya Saeki <abc.tkys+pub@gmail.com>"]
 
 [lib]
@@ -12,3 +12,6 @@ libc = "0.2.0"
 openssl = "0.10.29"
 toml = "0.4"
 uuid = { version = "0.5", features = ["v4"] }
+
+[profile.release]
+lto = true
