Use vendored OpenSSL so Windows is easier to build

--- a/wsl_hello_pam/Cargo.toml
+++ b/wsl_hello_pam/Cargo.toml
@@ -9,6 +9,6 @@ crate-type = ["dylib"]
 
 [dependencies]
 libc = "0.2.0"
-openssl = "0.10.29"
+openssl = { version = "0.10.29", features = ["vendored"] }
 toml = "0.4"
 uuid = { version = "0.5", features = ["v4"] }
