--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -2,13 +2,13 @@ name: CI and CD
 
 on:
   push:
-    branches: [master]
+    branches: ["master"]
   pull_request:
-    branches: [master]
+    branches: ["master"]
   workflow_dispatch:
     inputs:
       should_publish:
-        description: "Whether to publish the artifact (yes/no)"
+        description: "whether to publish the release (yes/no)"
         required: true
         default: "no"
 
@@ -83,8 +83,6 @@ jobs:
   release:
     name: "Release"
 
-    if: ${{ github.event.inputs.should_publish == 'yes' }}
-
     runs-on: ubuntu-latest
 
     needs: [build-pam-module, build-windows-binaries]
@@ -103,6 +101,7 @@ jobs:
           path: build
 
       - name: Conventional Changelog Action
+        if: ${{ github.event.inputs.should_publish == 'yes' }}
         id: changelog
         uses: TriPSs/conventional-changelog-action@v3
         with:
@@ -122,17 +121,28 @@ jobs:
           make -d release RELEASE="$release_name"
           echo "::set-output name=release_asset::$release_name.tar.gz"
 
+      - uses: actions/upload-artifact@v2
+        if: ${{ github.event.inputs.should_publish != 'yes' }}
+        name: Upload the release asset (CI)
+        with:
+          name: ${{ steps.create_asset.outputs.release_asset }}
+          path: ${{ steps.create_asset.outputs.release_asset }}
+          if-no-files-found: error
+
       - name: Create Release
+        if: ${{ github.event.inputs.should_publish == 'yes' }}
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.github_token }}
         with:
+          prerelease: true
           tag_name: ${{ steps.changelog.outputs.tag }}
           release_name: ${{ steps.changelog.outputs.tag }}
           body: ${{ steps.changelog.outputs.clean_changelog }}
 
       - name: Upload Release Asset
+        if: ${{ github.event.inputs.should_publish == 'yes' }}
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
