--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -37,8 +37,8 @@ jobs:
           
       - name: "Install Rust"
         run: |
-          rustup toolchain install ${{ inputs.rust }} --profile minimal --no-self-update
-          rustup default ${{ inputs.rust }}
+          rustup toolchain install stable --profile minimal --no-self-update
+          rustup default stable
         shell: bash
 
       - name: Enable Rust cache
