--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -114,7 +114,7 @@ jobs:
           release_name: release
         run: |
           make -d release RELEASE="$release_name"
-          echo "::set-output name=release_asset::$release_name.tar.gz"
+          echo "release_asset=$release_name.tar.gz" >> $GITHUB_OUTPUT
 
       - uses: actions/upload-artifact@v3
         if: ${{ github.event.inputs.should_publish != 'yes' }}
